@@ -2,6 +2,7 @@
 -----
 1. Tidy up code, thanks to Serial-ATA
 2. Update version of tag reader library, should now support ID3v2 in FLAC.
+3. Show error message if can't open, or create, database file.
 
 0.1.0
 -----
